Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,068
    • Issues 3,068
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1,004
    • Merge requests 1,004
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • MesaMesa
  • mesamesa
  • Issues
  • #1839
Closed
Open
Issue created Sep 25, 2019 by Alan Swanson@Reiver

radeonsi aborting in LLVM validation test in si_compile_tgsi_shader()

Updating to mesa git on a Kabini, Kodi start aborting with following error;

LLVM failed to compile a shader correctly: SGPR:VGPR usage is 48:12, but the hw limit is 0:0

Which is from the LLVM validation test for max_sgpr and max_vgpr in src/gallium/drivers/radeonsi/si_shader.c. Bisecting points to 0692ae34 "ac: move ac_get_num_physical_sgprs into radeon_info" from MR !2017 (merged) as first bad commit.

Problem is a missing call to ac_query_gpu_info() in do_winsys_init() in src/gallium/winsys/radeon/drm/radeon_drm_winsys.c compared to src/gallium/winsys/amdgpu/drm/amdgpu_winsys.c.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking