src/gallium/winsys/radeon/drm/radeon_drm_winsys.c
@@ -589,6 +589,9 @@ static bool do_winsys_init(struct radeon_drm_winsys *ws)
     ws->info.max_alignment = 1024*1024;
     ws->info.has_graphics = true;
     ws->info.cpdma_prefetch_writes_memory = true;
+    ws->info.max_wave64_per_simd = 10;
+    ws->info.num_physical_sgprs_per_simd = 512;
+    ws->info.num_physical_wave64_vgprs_per_simd = 256;
 
     ws->check_vm = strstr(debug_get_option("R600_DEBUG", ""), "check_vm") != NULL ||
                    strstr(debug_get_option("AMD_DEBUG", ""), "check_vm") != NULL;
